--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,9 @@ bing_verify:
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 2196F3
+  primary: 7aa8cc
   primary-rgb: "33, 150, 243"
-  secondary: 285172
+  secondary: 206faf
   secondary-dark: 29455b
   section-tout: eaf1f1
 
