--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 name: Armand Ballaci
 email: aballaci@gmail.com
 #canonical_url: https://edwinexemplar.com
-keywords: "Software Engineer, JEE, Spring, Apache Kafka, Angular, Flutter, Agile"
+keywords: "Software Engineer, JEE, Spring, Apache Kafka, Angular, React, Confluent, Flutter, Agile, Full Stack Entwickler Nürnberg"
 skills: "Senior Software Engineer in Nürnberg"
 baseurl:
 
